chore: Update processPrinterCommands to handle printerid in results

--- a/tests/index.html
+++ b/tests/index.html
@@ -89,8 +89,8 @@
             data: {
               commands: [
                 {
+                  commandid: '1',
                   printerid: '1',
-                  command: 'print',
                   method: 'POST',
                   path: '/print',
                   headers: {
