--- a/tests/index.html
+++ b/tests/index.html
@@ -85,7 +85,7 @@
         window.postMessage(
           {
             target: 'bookingfor-extension-v900', // this must be the target name of the extension, currently name is "bookingfor-extension-v900"
-            type: 'EXECUTE_COMMAND',
+            type: 'COMMAND',
             data: {
               commands: [
                 {
@@ -110,7 +110,7 @@
       window.addEventListener('message', (event) => {
         if (
           event.data.target === 'bookingfor-extension-v900' &&
-          event.data.type === 'RESULT'
+          event.data.type.includes('RESULT')
         ) {
           consoleEl.textContent = JSON.stringify(event.data, null, 2)
 
